log
Thu 05 Oct 2023 12:42:53 PM UTC: 
 tests:  0|5
total_score: 0/70
4cf2248
Thu 05 Oct 2023 12:51:33 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:62:27: error: unused variable ‘adj_node’ [-Werror=unused-variable]
   62 |                     Node* adj_node = copy(n);
      |                           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0cac50e
Thu 05 Oct 2023 12:52:40 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:62:27: error: unused variable ‘adj_node’ [-Werror=unused-variable]
   62 |                     Node* adj_node = copy(n);
      |                           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ac35eb7
Thu 05 Oct 2023 12:53:08 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|4
total_score: 15/70
610974a
Thu 05 Oct 2023 12:54:11 PM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
8cb114c
Thu 05 Oct 2023 12:58:55 PM UTC: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:9: error: unused variable ‘submatrix_check’ [-Werror=unused-variable]
   49 |     int submatrix_check[9][10] = {0}; // Arreglo para verificar las submatrices.
      |         ^~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
362bc28
Thu 05 Oct 2023 01:00:02 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|4
total_score: 15/70
a65dd60
Thu 05 Oct 2023 01:00:27 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ae5b5e3
Thu 05 Oct 2023 01:04:18 PM UTC: 
 sudoku.c | 38 ++++++++++++++++++++++++++++++++++++++
 1 file changed, 38 insertions(+)
 tests:  2|4
total_score: 15/70
fa766d5
Thu 05 Oct 2023 01:05:27 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|3
total_score: 35/70
0a65379
